Simple site update

--- a/index.html
+++ b/index.html
@@ -1,1 +1,115 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eva Tuecke</title>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet"> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <div class="logo">
+                <span><strong>Eva Tuecke</strong></span>
+            </div>
+            <nav>
+                <!-- <a href="#">Writing</a>
+                <a href="#">Projects</a> -->
+                <a href="https://www.linkedin.com/in/evatuecke/" target="_blank" aria-label="LinkedIn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
+                        <rect x="2" y="9" width="4" height="12"></rect>
+                        <circle cx="4" cy="4" r="2"></circle>
+                    </svg>
+                </a>
+
+                <a href="https://x.com/evatuecke" target="_blank" aria-label="X (Twitter)">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M4 4l11.733 16h4.267l-11.733 -16z" />
+                        <path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772" />
+                    </svg>
+                </a>
+
+                <a href="https://github.com/etuecke" target="_blank" aria-label="GitHub">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path
+                            d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
+                        </path>
+                    </svg>
+                </a>
+
+            </nav>
+        </header>
+
+
+        <main>
+            <p>Building something new. CS @ Harvard.</p>
+
+            <div class="divider"></div>
+
+            <section class="collapsible">
+                <h2 class="section-title">
+                    <strong>
+                        Previously
+                    </strong>
+                    <span class="caret">^</span>
+                </h2>
+                <div class="section-content">
+                    <p>Starlink software @ SpaceX</p>
+                    <p>ML research for LLM ensembling @ MIT-IBM Watson AI Lab </p>
+                    <p>Software @ Clay (then series A)</p>
+                    <p>Computational particle physics, searching for dark matter @ Fermilab</p>
+                    <p>Contrary Venture Partner, Neo Scholar</p>
+                </div>
+            </section>
+
+            <div class="divider"></div>
+
+            <section class="collapsible">
+                <h2 class="section-title">
+                    <strong>
+                        Built
+                    </strong>
+                    <span class="caret">^</span>
+                </h2>
+                <div class="section-content">
+                    <p>Crash-coursed hardware at MIT and built
+                        <strong>
+                            <a href="https://fab.cba.mit.edu/classes/863.24/people/EvaTuecke/final-project-pages/final-project-page.html"
+                                class="subtle-link" target="_blank">The Focus-inator</a>
+                        </strong>
+                    </p>
+
+                    <p>Bounty based knowledge marketplace for programming -
+                        <strong>
+                            <a href="https://quidio.co/" class="subtle-link" target="_blank">Quidio</a>
+                        </strong>
+                    </p>
+
+                    <p>Research -
+                        <strong>
+                            <a href="https://arxiv.org/abs/2209.13128" class="subtle-link" target="_blank">Physics
+                                Beyond
+                                the Standard Model at Energy Frontier</a>
+                        </strong>
+                    </p>
+
+                </div>
+            </section>
+
+        </main>
+    </div>
+    <script src="script.js"></script>
+</body>
+
+</html>
