--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <p>ML research for LLM ensembling @ MIT-IBM Watson AI Lab </p>
                     <p>Software @ Clay (then series A)</p>
                     <p>Computational particle physics, searching for dark matter @ Fermilab</p>
-                    <p>Contrary Venture Partner, Neo Scholar</p>
+                    <p>Neo Scholar, Contrary Venture Partner</p>
                 </div>
             </section>
 
